finalisation du header, mise en place de la navigation avec les animations

--- a/src/main.scss
+++ b/src/main.scss
@@ -4,4 +4,19 @@
 @use "./scss/utils/utils"; 
 
 // import component header style
-@use './scss/components/header.scss'
+@use './scss/components/header.scss'; 
+
+
+// import header model style 
+@use "./scss/components/model";
+
+// import nav style 
+@use "./scss/components/nav"; 
+
+// import Toggle component style 
+@use "./scss/components/toggle"; 
+
+@use "./scss/components/destinations"; 
+
+// import layout style
+@use "./scss/layout/layout"; 
