--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,4 +1,7 @@
 $white:#fff;  
-$back:#000; 
+$black:#000; 
+$blackDark:#1C1D1F; 
 $main1:#ff4D58;
 $main2:#df2189; 
+$silver:#7f8C8D; 
+$silverLight:#aaa;
