--- a/src/scss/utils/utils.scss
+++ b/src/scss/utils/utils.scss
@@ -1,5 +1,5 @@
-@use "../abstracts/variables"; 
-@use "../abstracts/mixins"; 
+@use "../abstracts" as *; 
+
 .container {
     max-width: 1200px;
     margin-left: auto;
@@ -7,9 +7,51 @@
 }
 
 .btn-default {
-    @include mixins.button(variables.$main1, variables.$main2, 4.5rem, 1.4rem,0.2rem,0.2rem,0.2rem); 
+    @include button($main1, $main2, 4.5rem, 1.4rem,0.2rem,0.2rem,0.2rem); 
 }
 
+.btn-black {
+    @include button($blackDark, $blackDark, 4.5rem, 1.4rem,0.4rem,0.1rem,0.6rem); 
+    letter-spacing: .1rem;
+}
 .pr {
     position: relative;
+}
+.group {
+    margin-bottom: 1.3rem;
+    span {
+        font-size: 1.5rem;
+        cursor: pointer;
+        color: $blackDark;
+        display: inline-block;
+    }
+    &__control {
+        display: block;
+        width: 100%;
+        font-size: 1.6rem;
+        border-radius: .4rem;
+        outline: none;
+        border: 1px solid $silver; 
+        height: 5rem;
+        padding: 0 2rem;
+    }
+}
+
+::placeholder {
+    color: $blackDark;
+    font-size: 1.7rem;
+}
+.flex {
+  display: flex;
+}
+.space-between {
+    justify-content: space-between;
+}
+
+.y-center {
+    align-items: center;
+}
+
+.p-15 {
+    padding: 1.5rem;
 }
