--- a/src/scss/components/_destinations.scss
+++ b/src/scss/components/_destinations.scss
@@ -1,8 +1,8 @@
-@use "../abstracts/variables" as *; 
+@use "../abstracts" as *; 
 
 
 .destinations {
-    margin: 5rem 0;
+    margin: 8rem 0;
 
     &__heading {
         font-size: 2.8rem;
@@ -22,11 +22,62 @@
             
         }
     }
+    &__block {
+        margin-top: 5rem;
+    }
 
     &__paragraphe {
         font-size: 1.4rem;
         line-height: 2.7rem;
         color: $silverLight; 
         font-weight: 500;
+    }
+    &__card {
+        width: 100%;
+        height: 35rem;
+        border-radius: 1rem;
+        overflow: hidden;
+        position: relative; 
+        &__img {
+            width: 100%;
+            height: 100%;     
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+        &__layer {
+            @include position(absolute, 0, 0, 0, 0, 100%, 100%); 
+            background: linear-gradient(to bottom, transparent 30%, $black);
+            @include align(flex, null, flex-end,null );
+            padding:2rem; 
+            color:$white; 
+            &__content {
+                @include align(flex, null, center, null ); 
+                &__country {
+                    font-size: 1.5rem;
+                    margin-left: .4rem;
+                }
+            }
+        }
+        &__info {
+            overflow: hidden;
+            @include position(absolute, 25%, 0, null, null, 0, 50%); 
+            @include align(flex, center, center,null);                          
+            background: linear-gradient(to right, $main1, $main2);
+            transition: all .5s linear;
+            &__text {
+                transform: rotate(-90deg);
+            
+            }
+        }
+        &:hover &__info {                   
+            width: 100%;
+            transform: rotate(90deg);
+
+        }
+                                                                                                                                                             
     }
 }
