--- a/src/scss/utils/utils.scss
+++ b/src/scss/utils/utils.scss
@@ -6,14 +6,7 @@
     margin-right: auto;
 }
 
-.btn-default {
-    @include button($main1, $main2, 4.5rem, 1.4rem,0.2rem,0.2rem,0.2rem); 
-}
 
-.btn-black {
-    @include button($blackDark, $blackDark, 4.5rem, 1.4rem,0.4rem,0.1rem,0.6rem); 
-    letter-spacing: .1rem;
-}
 .pr {
     position: relative;
 }
@@ -54,4 +47,23 @@
 
 .p-15 {
     padding: 1.5rem;
+}
+
+.mr-minus-15 {
+    margin-right: -1.5rem;
+}
+
+.ml-minus-15 {
+    margin-left: -1.5rem;
+}
+
+
+.heading {
+    margin-bottom: 4rem;
+    font-size: 2rem;
+    font-weight: 400;
+    background: linear-gradient(to right, $main1, $main2);
+    background-clip: text;
+    color: transparent;
+    transform: rotate(-2deg);
 }
